# pandas_test

./: README.md  pyproject.toml
src/my_history/: .cli.py.swp  cli.py
